<?xml version="1.0"?>
<package format="2">
  <name>sr_inverse_kinematics_solver_sample</name>
  <version>0.0.0</version>
  <description>The sr_inverse_kinematics_solver_sample package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ik_constraint2</depend>
  <depend>sr_inverse_kinematics_solver</depend>
  <depend>choreonoid_viewer</depend>

</package>
